# azure-ai-apps

./: .gitignore  README.md
agent-rag-resume/: .env-sample  =1.30.0  Dockerfile  README.md  pyproject.toml  requirements.txt  run_ai_foundry_agent_sk.sh  setup_run.sh  test_clean_install.sh
agent-rag-resume/agent_rag_resume/: __init__.py  __main__.py  ai_foundry_agent_sk.py  azure_rag_chat_ai_foundry_agent_style_python_single_file_app.py
agent-rag-resume/aks/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  runbook_deploy.sh  secret.yaml-sample  service.yaml
agent-rag-resume/plugins/UserPromptPlugin/USER_PROMPT_TEMPLATE/: config.json  skprompt.txt
agentframework/: .dockerignore  .env-sample  README.md  agentframework.db  ai_chat_client.py  chatbot-Dockerfile  cli.py  config.py  db.py  main-Dockerfile  main.py  pyproject.toml  run_docker_acr.sh  uv_runbook.sh
agentframework/aks/: .gitignore  configmap.yaml  deployment.yaml  hpa.yaml  ingress-host-patch.yaml  ingress.yaml  kustomization.yaml  runbook_deploy.sh  secret.yaml-sample  service.yaml
agentframework/chatbot/: chatbot.py  config.py  config.yaml
agentframework/prompts/: assistant.yaml  assistant_jinja.yaml
app-rag-aisearch-sk/: .env-sample  .gitignore  chat_with_docs.py  chat_with_docs_api.py  chat_with_resumes.py  cmds.sh  config.py  create_index_skill_indexer_datasource_blob.py  create_search_index_resume.py  create_skillset_run_indexerv2.py  flowlogs.json  prompttest.http  prompttest_fixed.http  query_ai_search.py  readme.md  requirements.txt  resume-index.json  resume_datamodel.py  search-tests.http  search_docs.py  search_resumes_api.py
app-rag-aisearch-sk/assets/: basic.prompty  intent_mapping.prompty  resumes.csv
python-uv-project-template/: .gitignore  main.py  pyproject.toml  uv_runbook.ipynb  uv_runbook.sh
rag-app-resumes/: .env-sample  .gitignore  chat_with_resumes.py  chat_with_resumes_api.py  create_index_run_indexer.py  create_index_skill_indexer_datasource_blob.py  create_search_index_resume.py  create_skillset_run_indexerv2.py  prompttest.http  readme.md  requirements.txt  search_resumes.py  search_resumes_api.py  test-cmds.sh  upload-data-blobstorage.py
rag-chatapp-retail/: .env-sample  .gitignore  Dockerfile  app.py  chat.py  chat_with_products.py  create_search_index.py  create_search_index_resume.py  get_product_documents.py  myevalresults.json  requirements.txt  scripts-runner resume.sh  scripts-runner.sh
streamlit-chat/: .env-sample  .gitignore  agent.py  chatbot-agentic-nogood.py  chatbot-agentic.py  chatbot.py  cmds.sh  config.py  dockerfile  readme.md  requirements.txt
(+28 files in other folders)
