[project]
name = "agent-rag-resume"
version = "0.1.0"
description = "Azure AI RAG Chat application with Semantic Kernel and Azure AI Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "azure-search-documents>=11.6.0b1",
    "azure-core>=1.30.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "semantic-kernel>=1.0.3",
    "azure-identity>=1.15.0",
    "azure-ai-inference>=1.0.0b1",
    "azure-ai-projects>=1.0.0b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agent-rag-chat = "agent_rag_resume.ai_foundry_agent_sk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_rag_resume"]
include = [
    "plugins/**/*",
    "assets/**/*",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
